fix: z-index of chat window.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -177,6 +177,7 @@ body.index-body {
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 1020;
 }
 
 .join-chat-container {
